.tanzu/config/docker-demo-visual.yml

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/docker-demo-visual
  name: ddv-http-route
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: ddv
  rules:
  - backendRefs:
    - kind: Service
      name: docker-demo-visual
      port: 8080
