.tanzu/config/httproute.yml
#apiVersion: gateway.networking.k8s.io/v1
#kind: Gateway
#metadata:
#  name: example-gateway
#  namespace: istio-system
#spec:
#  gatewayClassName: istio
#  listeners:
#  - name: http
#    protocol: HTTP
#    port: 80
#    allowedRoutes:
#      namespaces:
#        from: All
#---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: docker-demo-visual
spec:
  parentRefs:
  - name: example-gateway
    namespace: istio-system
  hostnames:
  - "docker-demo-visual"
  rules:
  - backendRefs:
    - name: docker-demo-visual
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: docker-demo-visual2
spec:
  parentRefs:
  - name: example-gateway
    namespace: istio-system
  hostnames:
  - "docker-demo-visual2"
  rules:
  - backendRefs:
    - name: docker-demo-visual2
      port: 8080
