.tanzu/config/httproutes.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: docker-demo-visual
spec:
  parentRefs:
  - name: example-gateway
    namespace: istio-system
  hostnames:
  - "docker-demo-visual.tp4k8s.vmware.work.mbentley.net"
  rules:
  - backendRefs:
    - name: docker-demo-visual
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: docker-demo-visual-root
spec:
  parentRefs:
  - name: example-gateway
    namespace: istio-system
  hostnames:
  - "docker-demo-visual-root.tp4k8s.vmware.work.mbentley.net"
  rules:
  - backendRefs:
    - name: docker-demo-visual-root
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: go-hostname
spec:
  parentRefs:
  - name: example-gateway
    namespace: istio-system
  hostnames:
  - "go-hostname.tp4k8s.vmware.work.mbentley.net"
  rules:
  - backendRefs:
    - name: go-hostname
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx-root
spec:
  parentRefs:
  - name: example-gateway
    namespace: istio-system
  hostnames:
  - "nginx-root.tp4k8s.vmware.work.mbentley.net"
  rules:
  - backendRefs:
    - name: nginx-root
      port: 8080
