.tanzu/config/nginx-hostname.yml

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/nginx
  name: nr-http-route
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: nginx
  rules:
  - backendRefs:
    - kind: Service
      name: nginx
      port: 8080
